<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.create.CreateActivity">

    <!-- ImageView -->
    <ImageView
        android:id="@+id/iv_obat"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/obat_sample"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_nama_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Item_name"
        android:inputType="text"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/iv_obat"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/et_harga_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/item_harga"
        android:inputType="number"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/et_nama_obat" />

    <EditText
        android:id="@+id/et_kategori_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/item_category"
        android:inputType="text"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/et_harga_obat" />

    <EditText
        android:id="@+id/et_stock_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/stock"
        android:inputType="text"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/et_kategori_obat" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Simpan"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/et_stock_obat" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Delete"
        android:visibility="gone"
        android:paddingHorizontal="18dp"
        tools:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>
