<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="15dp"
        android:visibility="gone"
        tools:visibility="invisible" />

    <View
        android:id="@+id/overlay_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:clickable="true"
        android:elevation="14dp"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/headline_on_login"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="56dp"
                android:paddingHorizontal="18dp"
                android:textColor="@color/textColorCaption2"
                android:textColorHint="@color/textColorCaption2"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/ed_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="56dp"
                android:paddingHorizontal="18dp"
                android:textColor="@color/textColorCaption"
                android:textColorHint="@color/textColorCaption2"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/ed_login_email"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="@+id/ed_login_email"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/style_button"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
                app:layout_constraintStart_toStartOf="@+id/ed_login_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>