<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp"
    android:outlineAmbientShadowColor="@color/shadowColor"
    android:outlineSpotShadowColor="@color/shadowColor"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Gambar Obat -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_obat"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_obat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/obat_sample"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <!-- Nama Obat -->
        <TextView
            android:id="@+id/tv_obat_nama"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="sans-serif"
            android:gravity="start|bottom"
            android:text="@string/Item_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_obat_harga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_obat"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Harga Obat -->
        <TextView
            android:id="@+id/tv_obat_harga"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif"
            android:gravity="start|top"
            android:text="@string/item_harga"
            android:textColor="@color/textColorCaption2"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_obat_kategori"
            app:layout_constraintEnd_toEndOf="@id/tv_obat_nama"
            app:layout_constraintStart_toStartOf="@id/tv_obat_nama"
            app:layout_constraintTop_toBottomOf="@id/tv_obat_nama" />

        <!-- Kategori Obat -->
        <TextView
            android:id="@+id/tv_obat_kategori"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif"
            android:gravity="start|top"
            android:text="@string/item_category"
            android:textColor="@color/textColorCaption2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_obat_nama"
            app:layout_constraintStart_toStartOf="@id/tv_obat_nama"
            app:layout_constraintTop_toBottomOf="@id/tv_obat_harga" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
